exercises/exercise1.txt
irb(main):001:0> Brewery create name:"BrewDog", year:2007
NoMethodError: undefined method `create' for main:Object
	from (irb):1
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:90:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:9:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands.rb:62:in `<top (required)>'
	from bin/rails:4:in `require'
	from bin/rails:4:in `<main>'
irb(main):002:0> Brewery.create name:"BrewDog", year:2007
   (0.4ms)  begin transaction
  SQL (38.6ms)  INSERT INTO "breweries" ("created_at", "name", "updated_at", "year") VALUES (?, ?, ?, ?)  [["created_at", Sun, 25 Jan 2015 12:16:41 UTC +00:00], ["name", "BrewDog"], ["updated_at", Sun, 25 Jan 2015 12:16:41 UTC +00:00], ["year", 2007]]
   (65.8ms)  commit transaction
=> #<Brewery id: 4, name: "BrewDog", year: 2007, created_at: "2015-01-25 12:16:41", updated_at: "2015-01-25 12:16:41">
irb(main):003:0> Brewery.id "BrewDog"
NoMethodError: undefined method `id' for #<Class:0xb95c281c>
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/activerecord-4.0.2/lib/active_record/dynamic_matchers.rb:22:in `method_missing'
	from (irb):3
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:90:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:9:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands.rb:62:in `<top (required)>'
	from bin/rails:4:in `require'
	from bin/rails:4:in `<main>'
irb(main):004:0> Breweries
NameError: uninitialized constant Breweries
	from (irb):4
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:90:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:9:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands.rb:62:in `<top (required)>'
	from bin/rails:4:in `require'
	from bin/rails:4:in `<main>'
irb(main):005:0> breweries
NameError: undefined local variable or method `breweries' for main:Object
	from (irb):5
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:90:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:9:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands.rb:62:in `<top (required)>'
	from bin/rails:4:in `require'
	from bin/rails:4:in `<main>'
irb(main):006:0> Brewery.find_by name"BrewDog"
NoMethodError: undefined method `name' for main:Object
	from (irb):6
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:90:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:9:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands.rb:62:in `<top (required)>'
	from bin/rails:4:in `require'
	from bin/rails:4:in `<main>'
irb(main):007:0> Brewery.find_by name:"BrewDog"
  Brewery Load (60.2ms)  SELECT "breweries".* FROM "breweries" WHERE "breweries"."name" = 'BrewDog' LIMIT 1
=> #<Brewery id: 4, name: "BrewDog", year: 2007, created_at: "2015-01-25 12:16:41", updated_at: "2015-01-25 12:16:41">
irb(main):008:0> Beer.create name:"Punk IPA", style:"IPA", brewery_id:4
   (0.5ms)  begin transaction
  SQL (6.7ms)  INSERT INTO "beers" ("brewery_id", "created_at", "name", "style", "updated_at") VALUES (?, ?, ?, ?, ?)  [["brewery_id", 4], ["created_at", Sun, 25 Jan 2015 12:21:56 UTC +00:00], ["name", "Punk IPA"], ["style", "IPA"], ["updated_at", Sun, 25 Jan 2015 12:21:56 UTC +00:00]]
   (91.9ms)  commit transaction
=> #<Beer id: 8, name: "Punk IPA", style: "IPA", brewery_id: 4, created_at: "2015-01-25 12:21:56", updated_at: "2015-01-25 12:21:56">
irb(main):009:0> Beer.create name:"Nanny State", style:"lowalcohol", brewery_id:4
   (1.4ms)  begin transaction
  SQL (8.1ms)  INSERT INTO "beers" ("brewery_id", "created_at", "name", "style", "updated_at") VALUES (?, ?, ?, ?, ?)  [["brewery_id", 4], ["created_at", Sun, 25 Jan 2015 12:22:35 UTC +00:00], ["name", "Nanny State"], ["style", "lowalcohol"], ["updated_at", Sun, 25 Jan 2015 12:22:35 UTC +00:00]]
   (109.5ms)  commit transaction
=> #<Beer id: 9, name: "Nanny State", style: "lowalcohol", brewery_id: 4, created_at: "2015-01-25 12:22:35", updated_at: "2015-01-25 12:22:35">
irb(main):010:0> Beer.find_by name:"Punk IPA"
  Beer Load (2.4ms)  SELECT "beers".* FROM "beers" WHERE "beers"."name" = 'Punk IPA' LIMIT 1
=> #<Beer id: 8, name: "Punk IPA", style: "IPA", brewery_id: 4, created_at: "2015-01-25 12:21:56", updated_at: "2015-01-25 12:21:56">
irb(main):011:0> Rating.create score:20 beer_id:8
SyntaxError: (irb):11: syntax error, unexpected tIDENTIFIER, expecting end-of-input
Rating.create score:20 beer_id:8
                              ^
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:90:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:9:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands.rb:62:in `<top (required)>'
	from bin/rails:4:in `require'
	from bin/rails:4:in `<main>'
irb(main):012:0> Rating.all
  Rating Load (2.0ms)  SELECT "ratings".* FROM "ratings"
=> #<ActiveRecord::Relation [#<Rating id: 1, score: 10, beer_id: 1, created_at: "2015-01-24 18:59:12", updated_at: "2015-01-24 18:59:12">, #<Rating id: 2, score: 21, beer_id: 1, created_at: "2015-01-24 18:59:19", updated_at: "2015-01-24 18:59:19">, #<Rating id: 3, score: 17, beer_id: 1, created_at: "2015-01-24 18:59:24", updated_at: "2015-01-24 18:59:24">]>
irb(main):013:0> Rating.create score:20 beer_id: 8
SyntaxError: (irb):13: syntax error, unexpected tIDENTIFIER, expecting end-of-input
Rating.create score:20 beer_id: 8
                              ^
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:90:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands/console.rb:9:in `start'
	from /home/wadror/.rbenv/versions/2.0.0-p353/lib/ruby/gems/2.0.0/gems/railties-4.0.2/lib/rails/commands.rb:62:in `<top (required)>'
	from bin/rails:4:in `require'
	from bin/rails:4:in `<main>'
irb(main):014:0> b = Beer.find_by id:8
  Beer Load (2.4ms)  SELECT "beers".* FROM "beers" WHERE "beers"."id" = 8 LIMIT 1
=> #<Beer id: 8, name: "Punk IPA", style: "IPA", brewery_id: 4, created_at: "2015-01-25 12:21:56", updated_at: "2015-01-25 12:21:56">
irb(main):015:0> b.ratings.create score:20
   (0.7ms)  begin transaction
  SQL (12.4ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 8], ["created_at", Sun, 25 Jan 2015 12:29:17 UTC +00:00], ["score", 20], ["updated_at", Sun, 25 Jan 2015 12:29:17 UTC +00:00]]
   (91.7ms)  commit transaction
=> #<Rating id: 4, score: 20, beer_id: 8, created_at: "2015-01-25 12:29:17", updated_at: "2015-01-25 12:29:17">
irb(main):016:0> b.ratings.create score:11
   (5.5ms)  begin transaction
  SQL (12.2ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 8], ["created_at", Sun, 25 Jan 2015 12:29:26 UTC +00:00], ["score", 11], ["updated_at", Sun, 25 Jan 2015 12:29:26 UTC +00:00]]
   (83.7ms)  commit transaction
=> #<Rating id: 5, score: 11, beer_id: 8, created_at: "2015-01-25 12:29:26", updated_at: "2015-01-25 12:29:26">
irb(main):017:0> b.save
   (3.1ms)  begin transaction
   (4.9ms)  commit transaction
=> true
irb(main):018:0> b = Beer.find_by name:"Nanny State"
  Beer Load (2.9ms)  SELECT "beers".* FROM "beers" WHERE "beers"."name" = 'Nanny State' LIMIT 1
=> #<Beer id: 9, name: "Nanny State", style: "lowalcohol", brewery_id: 4, created_at: "2015-01-25 12:22:35", updated_at: "2015-01-25 12:22:35">
irb(main):019:0> b.ratings.create score:30
   (1.6ms)  begin transaction
  SQL (12.3ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 9], ["created_at", Sun, 25 Jan 2015 12:30:41 UTC +00:00], ["score", 30], ["updated_at", Sun, 25 Jan 2015 12:30:41 UTC +00:00]]
   (94.1ms)  commit transaction
=> #<Rating id: 6, score: 30, beer_id: 9, created_at: "2015-01-25 12:30:41", updated_at: "2015-01-25 12:30:41">
irb(main):020:0> b.ratings.create score:9
   (15.3ms)  begin transaction
  SQL (9.7ms)  INSERT INTO "ratings" ("beer_id", "created_at", "score", "updated_at") VALUES (?, ?, ?, ?)  [["beer_id", 9], ["created_at", Sun, 25 Jan 2015 12:30:50 UTC +00:00], ["score", 9], ["updated_at", Sun, 25 Jan 2015 12:30:50 UTC +00:00]]
   (78.0ms)  commit transaction
=> #<Rating id: 7, score: 9, beer_id: 9, created_at: "2015-01-25 12:30:50", updated_at: "2015-01-25 12:30:50">
irb(main):021:0> b.save
   (1.3ms)  begin transaction
   (0.4ms)  commit transaction
=> true
irb(main):022:0> 
